# trisa

./: .bazelrc  .bazelrc-travis  .bazelrc-travis-cache  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  skaffold.yaml
.github/workflows/: build.yml  publish-docs.yml
cmd/trisa/: BUILD.bazel  main.go  trisa.go
cmd/trisa/app/: BUILD.bazel  trisa.go
cmd/trisa/app/cmd/: BUILD.bazel  config.go  root.go  server.go
docs/: .gitignore  README.md  config.toml  hugo.toml  toc.md
docs/archetypes/: default.md
docs/content/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.md  _index.zh.md
docs/content/api/: _index.en.md  api.en.md  errors.en.md  protocol.en.md  workflows.md
docs/content/architecture/: _index.md
docs/content/conference/: _index.md  hackathon.md
docs/content/contributing/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.md  _index.zh.md  bylaws.md  documentation.md  how-to-contribute.en.md  license.de.md  license.en.md  license.fr.md  license.ja.md  license.md  license.zh.md
docs/content/data/: _index.en.md  envelopes.en.md  ivms.en.md  keys.en.md  payloads.en.md
docs/content/data-payloads/: _index.en.md
docs/content/envelopes/: _index.en.md
docs/content/envoy/: _index.en.md  api.en.md  configuration.en.md  deploy.en.md  openapi.en.md  support.end.md  webhook.en.md  workflows.en.md
docs/content/gds/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.md  _index.zh.md  api.en.md  certs-cli.en.md  members.de.md  members.en.md  members.fr.md  members.ja.md  members.zh.md  registration.de.md  registration.fr.md  registration.ja.md  registration.md  registration.zh.md  sectigo.de.md  sectigo.md  sectigo.zh.md
docs/content/getting-started/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.zh.md  api.en.md  errors.en.md  keys.en.md  protocol.en.md
docs/content/getting_started/: _index.md  demo.md  dev.md  testnet.md
docs/content/integration/: _index.en.md  _index.fr.md  _index.ja.md  _index.md  _index.zh.md
docs/content/ivms/: _index.en.md
docs/content/ivms101/: _index.en.md
docs/content/joining-trisa/: _index.en.md  _index.zh.md  ca.en.md  pkcs12.en.md  registration.en.md  sectigo.fr.md  sectigo.ja.md  trixo.en.md  verification.en.md
docs/content/openvasp/: _index.en.md  bridge.en.md  client.en.md  trp_flow.mmd
docs/content/protocol/: _index.en.md
docs/content/reference/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.zh.md  best-practices.en.md  best_practices.en.md  faq.de.md  faq.en.md  faq.fr.md  faq.ja.md  faq.zh.md  glossary.de.md  glossary.en.md  glossary.fr.md  glossary.ja.md  glossary.md  glossary.zh.md  how-to-contribute.en.md  license.en.md
docs/content/sectigo/: _index.md
docs/content/secure-envelopes/: _index.en.md
docs/content/testing/: _index.de.md  _index.en.md  _index.fr.md  _index.ja.md  _index.zh.md  rvasps.de.md  rvasps.en.md  rvasps.fr.md  rvasps.ja.md  rvasps.zh.md  trisa-cli.en.md
docs/content/testnet/: _index.en.md  _index.fr.md  _index.ja.md  _index.md  certs-cli.en.md  rvasps.de.md  rvasps.en.md  rvasps.fr.md  rvasps.ja.md  rvasps.md  rvasps.zh.md  trisa-cli.en.md
docs/content/trisa_improvement_proposal/: _index.md
docs/layouts/partials/: custom-footer.html  custom-header.html  edit-page.html  favicon.html  last-updated.html  logo.html  menu-footer.html
docs/static/css/: syntax.css
docs/static/openapi/: envoy.json
hack/etc/demo/: docker-compose.yml
hack/etc/kind/: trisa-cluster-one-worker.yaml
hack/exec/: bake-tooling.sh  build-docker.sh  build.sh  demo-docker-cleanup.sh  demo-docker.sh  demo-init.sh  demo-rebuild.sh  demo-run.sh  demo-stop.sh  dependencies.sh  docs-dev.sh  docs-generate.sh  gazelle.sh  k8s-cluster-destroy.sh  k8s-cluster-start.sh  k8s-vasps-delete.sh  k8s-vasps-run.sh  pki-dev-init.sh  pki-dev-server.sh  pki-dev.sh  pki-prod.sh  pki-server.sh  pki-testnet.sh  pki-testnet.trisa.io.sh  pull-tooling.sh  test.sh  travis-build-bootstrap.sh  travis-build.sh  travis-publish-bootstrap.sh  travis-publish.sh  travis-tooling-bootstrap.sh
hack/lib/: artifacts.sh  bazel.sh  demo.sh  docs.sh  init.sh  kind.sh  pki.sh  tooling.sh
hack/tooling/bazel/: Dockerfile  skaffold.yaml
hack/tooling/cfssl/: Dockerfile  skaffold.yaml
hack/tooling/gohugo/: Dockerfile  skaffold.yaml
lib/: README.md
pkg/: doc.go  version.go
pkg/bufconn/: listener.go
pkg/ca/: BUILD.bazel  util.go
pkg/dti/: dti.gen.go  dti.go  generate.go  generate.py
pkg/dti/testdata/: DTI_Data_20240701.json
pkg/gleif/: generate.go  generate.py  gleif.gen.go  gleif.go  gleif_test.go
pkg/iso3166/: alpha.go  alpha_test.go  validate.go  validate_test.go
pkg/ivms101/: db.go  db_test.go  enum.go  enum.pb.go  enum_test.go  errors.go  errors_test.go  generate.go  identity.go  identity.pb.go  identity_test.go  ivms101.go  ivms101.pb.go  ivms101_test.go  names.go  rekey.go  rekey_test.go  validate.go  validate_test.go
pkg/ivms101/testdata/: README.md  (+12 more)
pkg/openvasp/: client.go  client_test.go  errors.go  errors_test.go  handler.go  handler_test.go  iface.go  trp.go  trp_test.go
pkg/slip0044/: enum.go  enum.pb.go  errors.go  generate.go  slip0044.go  slip0044_test.go
pkg/trisa/: doc.go
pkg/trisa/crypto/aesgcm/: BUILD.bazel  aesgcm.go  aesgcm_test.go
pkg/trisa/discovery/: BUILD.bazel  discovery.go
pkg/trisa/handler/: BUILD.bazel  context.go  demo.go  handler.go  handler_test.go
pkg/trisa/protocol/: BUILD.bazel  protocol.go
pkg/trisa/server/: BUILD.bazel  server.go
pkg/trust/: errors.go  pem.go  pem_test.go  pool.go  trust.go  trust_test.go  zip.go  zip_test.go
proto/: BUILD.bazel
proto/ivms101/: BUILD.bazel  dummy.go  enum.proto  identity.proto  ivms101.proto
proto/slip0044/: enum.proto  generate.py  slip0044.jsonl
proto/trisa/data/ethereum/v1alpha1/: BUILD.bazel  ethereum.proto
proto/trisa/identity/us/v1alpha1/: BUILD.bazel  identity.proto
proto/trisa/protocol/v1alpha1/: BUILD.bazel  dummy.go  trisa.proto
proto/tvca/discovery/: BUILD.bazel  discovery.proto
(+194 files in other folders)
