load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["discovery.go"],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ca:go_default_library",
        "//proto/tvca/discovery:go_default_library",
    ],
)
