# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "context.go",
        "demo.go",
    ],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/trisa/protocol:go_default_library",
        "//proto/trisa/identity/be/v1alpha1:go_default_library",
        "//proto/trisa/protocol/v1alpha1:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
