load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["protocol.go"],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/trisa/crypto/aesgcm:go_default_library",
        "//proto/trisa/protocol/v1alpha1:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
