load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/trisa/handler:go_default_library",
        "//pkg/trisa/protocol:go_default_library",
        "//proto/trisa/protocol/v1alpha1:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
