load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "discovery_proto",
    srcs = ["discovery.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "discovery_go_proto",
    importpath = "github.com/trisacrypto/trisa/proto/tvca/discovery",
    proto = ":discovery_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":discovery_go_proto"],
    importpath = "github.com/trisacrypto/trisa/proto/tvca/discovery",
    visibility = ["//visibility:public"],
)
