load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["aesgcm.go"],
    importpath = "github.com/trisacrypto/trisa/pkg/trisa/crypto/aesgcm",
    visibility = ["//visibility:public"],
    deps = ["//pkg/trisa/crypto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["aesgcm_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
