load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1alpha1_proto",
    srcs = ["trisa.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "v1alpha1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/trisacrypto/trisa/proto/trisa/protocol/v1alpha1",
    proto = ":v1alpha1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["dummy.go"],
    embed = [":v1alpha1_go_proto"],
    importpath = "github.com/trisacrypto/trisa/proto/trisa/protocol/v1alpha1",
    visibility = ["//visibility:public"],
)
