load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "identity_proto",
    srcs = ["identity.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "identity_go_proto",
    importpath = "github.com/trisacrypto/trisa/proto/trisa/identity/us/v1alpha1",
    proto = ":v1alpha1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["dummy.go"],
    embed = [":identity_go_proto"],
    importpath = "github.com/trisacrypto/trisa/proto/trisa/identity/us/v1alpha1",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "v1alpha1_proto",
    srcs = ["identity.proto"],
    visibility = ["//visibility:public"],
)
